--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <h2>This is my JavaScript home page</h2>
-<!DOCTYPE html>
+<!doctype html>
+
 <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>HTML5 Boilerplate</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Base-bones HTML5</title>
+    <!-- You may want to add other icon formats and sizes, but have this at the least: -->
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="your.css">
+  </head>
 
-<body>
-  <h1>Page Title</h1>
-  <script src="scripts.js"></script>
-</body>
+  <body>
+    <main>
+      Base-bones HTML5
+    </main>
+    <script src="your.js"></script>
+    <noscript>
+      <!-- Optional, place it wherever it makes sense -->
+      JavaScript is not enabled.
+    </noscript>
+  </body>
 
 </html>
