--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<h2>This is my JavaScript home page</h2>
 <!doctype html>
 
 <html lang="en">
@@ -6,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Base-bones HTML5</title>
+    <title>Paisley Studio</title>
     <!-- You may want to add other icon formats and sizes, but have this at the least: -->
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="your.css">
@@ -14,7 +13,12 @@
 
   <body>
     <main>
-      Base-bones HTML5
+      <h3>Paisley Rodriguez <div class="description">graphic + web design</div></h3>
+      <h1>CSS</h1>
+      <p>
+        <h2>Untitled Assignment</h2>
+        <h2>Untitled Assignment</h2>
+      </p>
     </main>
     <script src="your.js"></script>
     <noscript>
