--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Paisley Studio</title>
+    <title>CSS - Paisley Rose Studio</title>
     <!-- You may want to add other icon formats and sizes, but have this at the least: -->
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="your.css">
