Update index.html - real style 1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,42 @@
     <!-- You may want to add other icon formats and sizes, but have this at the least: -->
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="your.css">
+        <style>
+    .name {
+    color: #262a76;
+    font-family: futura;
+    font-weight: bold;
+    font-size: 24px;
+    }
+      
+    .description {
+    color: #000000;
+    font-family: futura;
+    font-style: italic;
+    font-size: 16px;
+    }
+
+    .title {
+    color: #8d6fd1;
+    font-family: futura;
+    font-style: bold;
+    font-size: 40px;
+    }
+
+    ._assignment {
+    color: #3257A8;
+    font-family: futura;
+    font-weight: bold;
+    font-size: 30px;
+    }
+
+    .assignment_ {
+    color: #3257A8;
+    font-family: futura;
+    font-weight: bold;
+    font-size: 30px;
+    }
+    </style>
   </head>
 
   <body>
