Update index.html -  real style 2

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 
   <body>
     <main>
-      <h3>Paisley Rodriguez <div class="description">graphic + web design</div></h3>
-      <h1>CSS</h1>
+      <h3 class="name">Paisley Rodriguez <div class="description">graphic + web design</div></h3>
+      <h1 class="title">CSS</h1>
       <p>
-        <h2>Untitled Assignment</h2>
-        <h2>Untitled Assignment</h2>
+        <h2 class="_assignment">Untitled Assignment</h2>
+        <h2 class="assignment_">Untitled Assignment</h2>
       </p>
     </main>
     <script src="your.js"></script>
