--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
     }
 
     .title {
-    color: #8d6fd1;
+    color: #C83D95;
     font-family: futura;
     font-style: bold;
     font-size: 40px;
     }
 
     ._assignment {
-    color: #3257A8;
+    color: #9B0065;
     font-family: futura;
     font-weight: bold;
     font-size: 30px;
     }
 
     .assignment_ {
-    color: #3257A8;
+    color: 9B0065;
     font-family: futura;
     font-weight: bold;
     font-size: 30px;
@@ -49,7 +49,7 @@
 
   <body>
     <main>
-      <h3 class="name">Paisley Rodriguez <div class="description">graphic + web design</div></h3>
+      <h3 class="name">paisley rodriguez<div class="description">graphic + web design</div></h3>
       <h1 class="title">CSS</h1>
       <p>
         <h2 class="_assignment">Untitled Assignment</h2>
