Update index.html - real style 4

--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
     color: #C83D95;
     font-family: futura;
     font-style: bold;
-    font-size: 40px;
+    font-size: 46px;
     }
 
     ._assignment {
-    color: #9B0065;
+    color: ##3257A8;
     font-family: futura;
     font-weight: bold;
     font-size: 30px;
     }
 
     .assignment_ {
-    color: 9B0065;
+    color: #3257A8;
     font-family: futura;
     font-weight: bold;
     font-size: 30px;
