Update index.html - real style final pt 1

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     color: #C83D95;
     font-family: futura;
     font-style: bold;
-    font-size: 46px;
+    font-size: 43px;
     }
 
     ._assignment {
-    color: ##3257A8;
+    color: #3257A8;
     font-family: futura;
     font-weight: bold;
     font-size: 30px;
