Update index.html - real style final pt. 1 (official)

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <body>
     <main>
       <h3 class="name">paisley rodriguez<div class="description">graphic + web design</div></h3>
-      <h1 class="title">CSS</h1>
+      <h1 class="title">Client-Side Scripting</h1>
       <p>
         <h2 class="_assignment">Untitled Assignment</h2>
         <h2 class="assignment_">Untitled Assignment</h2>
