--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     }
 
     .title {
-    color: #C83D95;
+    color: #00975F;
     font-family: futura;
     font-style: bold;
     font-size: 43px;
@@ -49,7 +49,7 @@
 
   <body>
     <main>
-      <h3 class="name">paisley rodriguez<div class="description">graphic + web design</div></h3>
+      <h3 class="name">paisley rodriguez<div class="description">graphic + web design / spring 2025</div></h3>
       <h1 class="title">Client-Side Scripting</h1>
       <p>
         <h2 class="_assignment">Untitled Assignment</h2>
