Update index.html - update style final 3 (final magenta)

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
     }
 
     .title {
-    color: #00A86B;
+    color: #C83D95;
     font-family: futura;
     font-style: bold;
     font-size: 43px;
     }
+    /*green color: #00A86B*/
 
     ._assignment {
     color: #3257A8;
