adding vsc line and styles to java

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
     font-size: 16px;
     }
 
+    .vsc {
+      color: #8d6fd1;
+    font-family: futura;
+    font-weight: bold;
+    font-size: 16px;
+    }
+
     .title {
     color: #C83D95;
     font-family: futura;
@@ -53,8 +60,10 @@
       <h3 class="name">paisley rodriguez<div class="description">graphic + web design | spring 2025</div></h3>
       <h1 class="title">Client-Side Scripting</h1>
       <p>
+      <br>
         <h2 class="_assignment">Untitled Assignment</h2>
         <h2 class="assignment_">Untitled Assignment</h2>
+        <p class="vsc">[I added this sentence in VSC]</p>
       </p>
     </main>
     <script src="your.js"></script>
