--- a/index.html
+++ b/index.html
@@ -8,58 +8,15 @@
     <title>CSS - Paisley Rose Studio</title>
     <!-- You may want to add other icon formats and sizes, but have this at the least: -->
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="your.css">
-    <style>
-    .name {
-    color: #262a76;
-    font-family: futura;
-    font-weight: bold;
-    font-size: 24px;
-    }
-      
-    .description {
-    color: #000000;
-    font-family: futura;
-    font-style: italic;
-    font-size: 16px;
-    }
+    <link rel="stylesheet" href="css/style.css">
 
-    .vsc {
-      color: #8d6fd1;
-    font-family: futura;
-    font-weight: bold;
-    font-size: 16px;
-    }
-
-    .title {
-    color: #C83D95;
-    font-family: futura;
-    font-style: bold;
-    font-size: 43px;
-    }
-    /*green color: #00A86B*/
-
-    ._assignment {
-    color: #3257A8;
-    font-family: futura;
-    font-weight: bold;
-    font-size: 30px;
-    }
-
-    .assignment_ {
-    color: #3257A8;
-    font-family: futura;
-    font-weight: bold;
-    font-size: 30px;
-    }
-    </style>
   </head>
 
   <body>
     <main>
       <h3 class="name">paisley rodriguez<div class="description">graphic + web design | spring 2025</div></h3>
       <br>
-      <h1 class="title">Client-Side Scripting</h1>
+      <h1 class="title">Client-Side Scripting Test</h1>
       <p>
         <h2 class="_assignment">Untitled Assignment</h2>
         <h2 class="assignment_">Untitled Assignment</h2>
