test if photo appears

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <!-- You may want to add other icon formats and sizes, but have this at the least: -->
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
-
   </head>
 
   <body>
     <main>
       <h3 class="name">paisley rodriguez<div class="description">graphic + web design | spring 2025</div></h3>
       <br>
-      <h1 class="title">Client-Side Scripting Test</h1>
+      <h1 class="title">Client-Side Scripting</h1>
       <p>
         <h2 class="_assignment">Untitled Assignment</h2>
         <h2 class="assignment_">Untitled Assignment</h2>
