--- a/game.html
+++ b/game.html
@@ -7,6 +7,7 @@
     <title>RPG - Dragon Repeller</title>
     <link rel="stylesheet" href="css/style-game.css">
   </head>
+  <h1 class="title">Dragon Repeller</h1>
   <body>
     <div id="game">
       <div id="stats">
@@ -27,7 +28,7 @@
         Welcome to Dragon Repeller. You must defeat the dragon that is preventing people from leaving the town. You are in the town square. Where do you want to go? Use the buttons above.
       </div>
     </div>
-    <img src="images/town-3_joao-neto-vilarejo.jpg">
+    <img id="town" src="images/town-2_loic-burckle.jpg">
     <script src="js/script.js"></script>
   </body>
 </html>
