--- a/game.html
+++ b/game.html
@@ -16,9 +16,9 @@
         <span class="stat">Gold: <strong><span id="goldText">50</span></strong></span>
       </div>
       <div id="controls">
-        <button id="button1">Go to store</button>
-        <button id="button2">Go to cave</button>
-        <button id="button3">Fight dragon</button>
+        <button id="button1">Go to Store</button>
+        <button id="button2">Go to Cave</button>
+        <button id="button3">Fight Dragon</button>
       </div>
       <div id="monsterStats">
         <span class="stat">Monster Name: <strong><span id="monsterName"></span></strong></span>
@@ -29,6 +29,7 @@
       </div>
     </div>
     <img id="town" src="images/town-2_loic-burckle.jpg">
+    <img id="scroll" src="images/scroll-5.jpg"
     <script src="js/script.js"></script>
   </body>
 </html>
