--- a/game.html
+++ b/game.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     <img id="town" src="images/town-2_loic-burckle.jpg">
-    <img id="scroll" src="images/scroll-5.jpg"
+    <img id="scroll" src="images/scroll-5.jpg">
     <script src="js/script.js"></script>
   </body>
 </html>
