final version pt. 1 - update to title

--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>RPG - Dragon Repeller</title>
+    <title>Dragon Repeller</title>
     <link rel="stylesheet" href="css/style-game.css">
   </head>
   <h1 class="title">Dragon Repeller</h1>
