fixing missing link - RPG

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <br>
       <h1 class="title">Client-Side Scripting</h1>
       <p>
-        <h2 class="_assignment" href="game.html">Dragon Repeller (RPG Game)</h2>
+        <h2 href="game.html" class="_assignment">Dragon Repeller (RPG Game)</h2>
         <h2 class="assignment_">Untitled Assignment</h2>
         <p class="vsc">[I added this sentence in VSC]</p>
       </p>
