adding lists/padding to csscript

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
       <h3 class="name">paisley rodriguez<div class="description">graphic + web design | spring 2025</div></h3>
       <br>
       <h1 class="title">Client-Side Scripting</h1>
-      <p>
-        <h2 href="game.html" class="_assignment">Dragon Repeller (RPG Game)</h2>
-        <h2 class="assignment_">Untitled Assignment</h2>
+      <ul>
+        <ol><a class="_assignment" href="game.html">Dragon Repeller (RPG Game)</a></ol>
+        <br>
+        <ol><a class="_assignment" href="">Untitled Assignment</a></ol>
+      </ul>
         <p class="vsc">[I added this sentence in VSC]</p>
       </p>
     </main>
