--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <ul>
         <ol><a class="_assignment" href="game.html">Dragon Repeller (RPG Game)</a></ol>
         <br>
-        <ol><a class="_assignment" href="">Untitled Assignment</a></ol>
+        <ol><a class="_assignment" href="counter.html">Calorie Counter</a></ol>
       </ul>
     </main>
     <script src="your.js"></script>
