applying new styles for assignment descriptions

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
       <br>
       <h1 class="title">Client-Side Scripting</h1>
       <ul>
-        <ol><a class="_assignment" href="game.html">Dragon Repeller (RPG Game)</a></ol>
+        <ol><a class="_assignment" href="game.html">Dragon Repeller<div class="_assignment-description">| rpg game</div></a></ol>
         <br>
-        <ol><a class="_assignment" href="counter.html">Calorie Counter</a></ol>
+        <ol><a class="_assignment" href="counter.html">CaloCount<div class="_assignment-description">| calorie counter</div></a></ol>
+        <br>
+        <ol><a class="_assignment" href="music.html">Musi<div class="_assignment-description">| music player</div></a></ol>
       </ul>
     </main>
     <script src="your.js"></script>
