adding calocount title

--- a/counter.html
+++ b/counter.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <h1>Calorie Counter</h1>
+      <h1>CaloCount</h1>
       <br>
       <div class="container">
         <form id="calorie-counter">
