updating titles for calo and musi

--- a/music.html
+++ b/music.html
@@ -15,7 +15,7 @@
     />
     <link rel="stylesheet" href="css/music.css"/>
     <title>
-     From the Ground Up - Quincy Larson
+     Musi
     </title>
   </head>
 
