--- a/counter.html
+++ b/counter.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/counter.css"/>
-    <title>Calorie Counter</title>
+    <title>CaloCount</title>
   </head>
   <body>
     <main>
