musi and queue font change

--- a/music.html
+++ b/music.html
@@ -27,7 +27,7 @@
             <div></div>
             <div></div>
           </div>
-          <h1 class="fcc-title">Musi</h1>
+          <h1 class="app-title">Musi</h1>
           <div class="parallel-lines">
             <div></div>
             <div></div>
