updating/adding palindrome to css/java page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <ol><a class="_assignment" href="counter.html">CaloCount<div class="_assignment-description">| calorie counter</div></a></ol>
         <br>
         <ol><a class="_assignment" href="music.html">Musi<div class="_assignment-description">| music player</div></a></ol>
+        <br>
+        <ol><a class="_assignment" href="palindrome.html">Is it a Palindrome?<div class="_assignment-description">| palindrome checker</div></a></ol>
       </ul>
     </main>
     <script src="your.js"></script>
